# Ternion

./: .env.example  .gitignore  LICENSE.md  README.md  config.example.yaml  public_tunnel_configuration.md  pyproject.toml  test-sticky.html
src/ternion/: __init__.py  __main__.py  build_web_static.py
src/ternion/core/: __init__.py  budget.py  config.py  config_store.py  deliverable_policy.py  evidence_cache.py  exceptions.py  intent_classifier.py  model_catalog.py  model_probe.py  models.py  project_profile.py  public_access.py  report_index.py  session_store.py  workspace_memory.py
src/ternion/providers/: __init__.py  anthropic.py  base.py  google.py  manager.py  openai.py  resilience.py
src/ternion/router/: __init__.py  context.py  message_router.py  prompts.py
src/ternion/server/: __init__.py  app.py  auth.py  control_routes.py  model_catalog_refresh.py  routes.py  session_archive.py
src/ternion/utils/: __init__.py  cursor_safety.py  evidence_chain.py  evidence_repository.py  evidence_requests_protocol.py  execution_history_compaction.py  file_meta.py  i18n.py  i18n_translations.json  language_resources.json  language_resources.py  log_manager.py  logging.py  model_ids.py  report_parser.py  secrets.py  shell_policy.py  streaming.py  token_estimator.py  tool_calls_parser.py  tool_policy.py  tool_result_compaction.py  workspace_paths.py
src/ternion/workflow/: __init__.py  graph.py  implementation_stage.py  nodes.py  state.py  streaming_events.py
tests/: conftest.py  test_auth_token.py  test_budget.py  test_build_web_static.py  test_cache_friendly_layout.py  test_cli_startup_output.py  test_config_store.py  test_control_routes_models.py  test_control_routes_public_access.py  test_cursor_safety.py  test_deliverable_policy.py  test_document_stabilization.py  test_dynamic_url.py  test_evidence_chain.py  test_evidence_repository.py  test_evidence_requests_protocol.py  test_evidence_topup_guardrail.py  test_execution_empty_output_retry.py  test_execution_instructions.py  test_execution_text_tool_calls_capability.py  test_execution_tool_filter.py  test_execution_topup_retry.py  test_execution_topup_stream_buffer.py  test_i18n.py  test_implementation_stage.py  test_intent_classifier.py  test_message_router.py  test_model_catalog.py  test_model_catalog_refresh.py  test_model_probe.py  test_nodes_smoke.py  test_optimizer_text_tool_calls_instruction.py  test_optimizer_topup_stream_buffer.py  test_optimizer_verification_failure_handoff.py  test_packaging_config.py  test_panel_static_mount.py  test_prompt_purpose_format.py  test_prompt_tool_name_drift_guard.py  test_provider_resilience.py  test_providers.py  (+31 more)
web/: index.html  package-lock.json  package.json  tailwind.config.js  test-sticky.html  tsconfig.app.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  i18n.test.ts  i18n.ts  index.css  main.tsx  modelDisplay.test.ts  modelDisplay.ts  vite-env.d.ts
web/src/api/: client.test.ts  client.ts
web/src/components/: ApiKeyManager.tsx  BudgetSettings.tsx  ExecutionModeSelector.tsx  ModelCatalogManager.test.tsx  ModelCatalogManager.tsx  ObservabilityPanel.test.tsx  ObservabilityPanel.tsx  PortsSettings.test.tsx  PortsSettings.tsx  PublicAccessNotice.test.tsx  PublicAccessNotice.tsx  RoleModelConfig.test.tsx  RoleModelConfig.tsx  SettingsDropdown.tsx  StatusBar.tsx  Toast.tsx  UsageDashboard.tsx  toastContext.ts
web/src/locales/: de.ts  en.ts  es.ts  fr.ts  ja.ts  ko.ts  zh.ts
