[project]
name = "ternion"
version = "1.0.0"
description = "A local LLM proxy gateway that orchestrates multi-model technical discussions"
readme = "README.md"
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.12"
authors = [
    { name = "Ternion Contributors" }
]
keywords = ["llm", "ai", "proxy", "gateway", "multi-model", "discussion", "cursor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.28.0",
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "google-genai>=1.0.0",
    "langgraph>=0.2.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "httplib2>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "pre-commit>=4.0.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
ternion = "ternion.__main__:main"

[project.urls]
Homepage = "https://github.com/ternion-ai/ternion"
Repository = "https://github.com/ternion-ai/ternion"
Documentation = "https://github.com/ternion-ai/ternion#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ternion"]
artifacts = [
    "src/ternion/web_static/**",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/ternion/**",
]
artifacts = [
    "src/ternion/web_static/**",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
# Test files often have unused fixture arguments
"tests/**/*.py" = ["ARG001", "ARG002"]
# Provider files keep **kwargs and params for API consistency
"src/ternion/providers/*.py" = ["ARG002"]
# log_manager keeps params for API consistency and future use
"src/ternion/utils/log_manager.py" = ["ARG002"]

[tool.ruff.lint.isort]
known-first-party = ["ternion"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = false  # Many SDKs return Any
warn_unused_ignores = false  # Avoid noise from conditional type: ignore comments
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
# Temporarily disabled to allow gradual adoption of strict typing
disable_error_code = [
    "type-arg",      # TODO: Add missing generic type parameters (e.g., dict, Queue)
    "dict-item",     # Dict value type mismatches for multimodal content - SDK-specific
    "arg-type",      # Argument type mismatches with external SDK type stubs
    "no-any-return", # Returning Any from typed functions - common with SDKs
    "union-attr",    # Attribute access on union types - SDK stream handling
    "return-value",  # Return type mismatches - TypedDict/dict compatibility
]

[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "google.generativeai.*",
]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "ternion.providers.google",
]
# Google SDK has incomplete type stubs
disable_error_code = ["attr-defined", "arg-type"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
# google.generativeai FutureWarning intentionally unfiltered
filterwarnings = [
    "ignore::DeprecationWarning:httplib2.*:",
]
